@@ -57,6 +57,7 @@ double* glb_return_input_values();
 
 
 int glb_invoke_hybrid_minimizer(int exp, int rule, double *x, double *chi2);
+int glb_invoke_siman_minimizer(int exp, int rule, double *x, double *chi2);
 
 
 // various projections with th12 fixed for a single experiment
